Fix IE11 issue where select is too tall in data-table (#4893)
* Fix IE11 issue where select is too tall in data-table

* Fix accidental increase in specificity

--- a/src/stylus/components/_data-table.styl
+++ b/src/stylus/components/_data-table.styl
@@ -92,6 +92,9 @@ theme(v-datatable, "v-datatable")
       padding: 0
       position: initial
 
+    .v-select__selections
+      flex-wrap: nowrap
+
       .v-select__selection--comma
         font-size: 12px
 
